# discord-bot-heroku

./: .env.template  .gitignore  .replit  LICENSE  Procfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
bot/: classesVRC.py  data_voilerc.py  functionVRC.py  itemNames.txt  main.py  server.py  testVRC.xml  token.txt
bot/templates/: index.html  style.css
data/: questions.csv
owa_discordbot/: client.py  main.py  settings.py
src/: main.py
static/: main.py  server.py
templates/: index.html
templates/style-script/: script.js
